Agregamos un banner y 2 botones

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <script src="https://kit.fontawesome.com/cd9352d84b.js"></script>
 </head>
 <body>
-    <h1>Menú Hamburgesa</h1>
+    <header class="hero-img">        
+        <h1 class="title">Menú Animado</h1>
+        <div class="header-buttons">
+            <a class="btn btn-pink" href="https://github.com/codegenial" target="_blank">GitHub</a>
+            <a class="btn btn-pink" href="https://twitter.com/intent/tweet?text=Creando%20%E2%80%93%20un%20%23menú%23hamburger%20animado%20con%20#css,%20#html%20y%20%40codegenial%20%F0%9F%98%8D%F0%9F%98%9C&amp;url=https://gitmoji.carloscuesta.me" target="_blank">Tweet</a>
+        </div>
+    </header>
     <div class="container">
         <div class="hamburger"></div>
     </div>
